--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <h1 id="background"> </h1>
     <h1 id="background1"></h1>
 
-    <h1 class="heading">LOVE CALCULATOR</h1>
+    <h1 class="heading">LOVE ❤️ CALCULATOR</h1>
     <form action="#">
         <div>
-            <input type="text" id="lover1Name"  placeholder="Your Name" required>
+            <input type="text" id="lover1Name"  placeholder="Enter your name" required>
         </div>
         <div>
-            <input type="text" id="lover2Name"  placeholder="Their Name" required>
+            <input type="text" id="lover2Name"  placeholder="Enter their name" required>
 
         </div>
 
