changed form method to post

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 id="background1"></h1>
 
     <h1 class="heading">LOVE ❤️ CALCULATOR</h1>
-    <form action="#">
+    <form method="#">
         <div>
             <input type="text" id="lover1Name"  placeholder="Enter your name" required>
         </div>
