increase fontsize for inputs

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <h1 class="heading">LOVE ❤️ CALCULATOR</h1>
     <form action="#" method="POST">
         <div>
-            <input type="text" id="lover1Name"  placeholder="Enter your name" required>
+            <input style="font-size: 20px;" type="text" id="lover1Name"  placeholder="Enter your name" required>
         </div>
         <div>
-            <input type="text" id="lover2Name"  placeholder="Enter their name" required>
+            <input style="font-size: 20px;" type="text" id="lover2Name"  placeholder="Enter their name" required>
 
         </div>
 
-        <input type="submit" value="CALCULATE" id="cal-btn">
+        <input  type="submit" value="CALCULATE" id="cal-btn">
 
         <h3 id="result"></h3>
 
